[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gambling-nlp"
version = "0.1.0"
description = "Lexicon-based detection of gambling discourse in Chinese retail-investor texts"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Egoriy Loktyushin" }]
requires-python = ">=3.10"
dependencies = ["jieba>=0.42"]

[project.optional-dependencies]
ml = ["scikit-learn>=1.3"]
dev = ["pytest", "scikit-learn>=1.3"]

[tool.setuptools.packages.find]
where = ["src"]
